Rectified the Langsmith variable names

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ PINECONE_ENVIRONMENT=<pinecone_project_env_name>
 PINECONE_INDEX=<pinecone_project_index_name>
 SERPAPI_API_KEY=<serp_api_key>
 GOOGLE_API_KEY=<google_api_key>
-LANGSMITH_TRACING=true
-LANGSMITH_ENDPOINT=<langsmith_endpoint>
-LANGSMITH_API_KEY=<langsmith_api_key>
-LANGSMITH_PROJECT=<langsmith_project_name>
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_ENDPOINT=<langsmith_endpoint>
+LANGCHAIN_API_KEY=<langsmith_api_key>
+LANGCHAIN_PROJECT=<langsmith_project_name>
